--- a/app/src/main/res/layout/part_main_action_bar.xml
+++ b/app/src/main/res/layout/part_main_action_bar.xml
@@ -25,4 +25,13 @@
         android:text="@string/app_name"
         android:textColor="?attr/colorOnPrimary"
         android:textSize="18sp" />
+
+    <ImageView
+        android:id="@+id/iv_new_folder"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:padding="13dp"
+        android:src="@drawable/ic_new_folder_light" />
 </RelativeLayout>
