--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,9 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <include layout="@layout/part_main_action_bar"/>
+    <include layout="@layout/part_main_action_bar" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_folder_path"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@color/light_gray"
-        android:orientation="horizontal"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/layout_item_path" />
+    <include layout="@layout/part_folder_path" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_folder"
@@ -29,6 +20,6 @@
         tools:itemCount="13"
         tools:listitem="@layout/layout_item_folder" />
 
-    <include layout="@layout/part_main_content"/>
+    <include layout="@layout/part_main_content" />
 
 </LinearLayout>
