--- a/app/src/main/res/layout/part_main_action_bar.xml
+++ b/app/src/main/res/layout/part_main_action_bar.xml
@@ -13,14 +13,21 @@
         android:layout_height="60dp"
         android:background="?attr/selectableItemBackground"
         android:padding="13dp"
-        android:src="@drawable/ic_arrow_left_light" />
+        android:src="@drawable/ic_arrow_left_light"
+        android:visibility="gone" />
+
+    <ImageView
+        android:layout_toLeftOf="@+id/tv_action_bar_title"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@mipmap/ic_app_icon1_foreground" />
 
     <TextView
         android:id="@+id/tv_action_bar_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="20dp"
         android:layout_toRightOf="@+id/iv_back_arrow"
         android:text="@string/app_name"
         android:textColor="?attr/colorOnPrimary"
