--- a/app/src/main/res/layout/part_main_action_bar.xml
+++ b/app/src/main/res/layout/part_main_action_bar.xml
@@ -13,8 +13,8 @@
         android:layout_height="60dp"
         android:background="?attr/selectableItemBackground"
         android:padding="13dp"
-        android:src="@drawable/ic_arrow_left_light"
-        android:visibility="gone" />
+        android:visibility="gone"
+        android:src="@drawable/ic_arrow_left_light" />
 
     <ImageView
         android:layout_toLeftOf="@+id/tv_action_bar_title"
@@ -28,7 +28,6 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/iv_back_arrow"
         android:text="@string/app_name"
         android:textColor="?attr/colorOnPrimary"
         android:textSize="18sp" />
