--- a/app/src/main/res/layout/layout_item_folder.xml
+++ b/app/src/main/res/layout/layout_item_folder.xml
@@ -7,8 +7,8 @@
     android:orientation="horizontal">
 
     <ImageView
-        android:layout_width="43dp"
-        android:layout_height="43dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:src="@drawable/ic_folder_yellow" />
@@ -18,5 +18,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="folder12"
+        android:textColor="@color/dark_gray"
         android:textSize="18sp" />
 </LinearLayout>
