--- a/app/src/main/res/layout/layout_item_path.xml
+++ b/app/src/main/res/layout/layout_item_path.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="folder1"
-        android:textColor="?attr/colorPrimaryDark"
+        android:textColor="@color/gray"
         android:textSize="15sp" />
 
 </LinearLayout>
