--- a/app/src/main/res/layout/part_folder_path.xml
+++ b/app/src/main/res/layout/part_folder_path.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rl_path_container"
     android:layout_width="match_parent"
+    android:visibility="gone"
     android:layout_height="60dp">
 
     <LinearLayout
@@ -11,13 +12,14 @@
         android:layout_width="60dp"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:background="@color/ic_app_icon1_background"
+        android:background="?attr/selectableItemBackground"
         android:gravity="center">
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:src="@drawable/ic_home" />
+            android:padding="17dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_home_dark" />
 
     </LinearLayout>
 
@@ -26,7 +28,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_toEndOf="@+id/ll_app_icon"
-        android:background="@color/light_gray"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/layout_item_path" />
