--- a/app/src/main/res/layout/layout_item_path.xml
+++ b/app/src/main/res/layout/layout_item_path.xml
@@ -3,9 +3,9 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:background="?attr/selectableItemBackground"
-    android:paddingStart="10dp"
-    android:paddingEnd="5dp"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:paddingStart="5dp"
+    android:paddingEnd="5dp">
 
     <ImageView
         android:layout_width="10dp"
@@ -13,10 +13,10 @@
         android:src="@drawable/ic_folder_path_left" />
 
     <TextView
-        android:layout_marginStart="5dp"
         android:id="@+id/tv_folder_item_path"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
         android:text="folder1"
         android:textColor="@color/gray"
         android:textSize="15sp" />
