--- a/app/src/main/res/layout/part_folder_path.xml
+++ b/app/src/main/res/layout/part_folder_path.xml
@@ -4,19 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rl_path_container"
     android:layout_width="match_parent"
-    android:visibility="gone"
-    android:layout_height="60dp">
+    android:layout_height="40dp">
 
     <LinearLayout
+        android:layout_marginStart="10dp"
         android:id="@+id/ll_app_icon"
-        android:layout_width="60dp"
-        android:layout_height="match_parent"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_alignParentStart="true"
-        android:background="?attr/selectableItemBackground"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:gravity="center">
 
         <ImageView
-            android:padding="17dp"
+            android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/ic_home_dark" />
