--- a/app/src/main/res/layout/part_main_action_bar.xml
+++ b/app/src/main/res/layout/part_main_action_bar.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:background="@color/white"
+    android:layout_height="?android:attr/actionBarSize"
     android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
 
     <ImageView
@@ -35,10 +34,10 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@id/tv_action_bar_title"
-        android:text="sdcard"
-        android:textStyle="italic"
+        android:text="~sdcard"
         android:textColor="@color/gray"
-        android:textSize="17sp" />
+        android:textSize="17sp"
+        android:textStyle="italic" />
 
     <ImageView
         android:id="@+id/iv_new_folder"
