--- a/app/src/main/res/layout/part_folder_path.xml
+++ b/app/src/main/res/layout/part_folder_path.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rl_path_container"
-    android:layout_weight="1"
+    android:visibility="visible"
     android:layout_width="match_parent"
     android:layout_height="60dp">
 
