--- a/app/src/main/res/layout/part_main_action_bar.xml
+++ b/app/src/main/res/layout/part_main_action_bar.xml
@@ -40,6 +40,15 @@
         android:textStyle="italic" />
 
     <ImageView
+        android:id="@+id/iv_paste"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_toLeftOf="@id/iv_new_folder"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:padding="15dp"
+        android:src="@drawable/ic_paste_dark1" />
+
+    <ImageView
         android:id="@+id/iv_new_folder"
         android:layout_width="50dp"
         android:layout_height="50dp"
