--- a/app/src/main/res/layout/layout_item_folder.xml
+++ b/app/src/main/res/layout/layout_item_folder.xml
@@ -7,6 +7,7 @@
     android:orientation="horizontal">
 
     <ImageView
+        android:id="@+id/iv_file_icon"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="15dp"
